--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.0.4",
     "@react-three/postprocessing": "^3.0.4",
-    "@theatre/core": "^0.7.2",
-    "@theatre/r3f": "^0.7.2",
     "axios": "^1.9.0",
     "framer-motion": "^10.16.4",
     "glslify": "^7.1.1",
     "gsap": "^3.12.7",
+    "jotai": "^2.12.5",
     "leva": "^0.10.0",
     "lil-gui": "^0.20.0",
     "meshline": "^3.3.1",
@@ -38,7 +37,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@theatre/studio": "^0.7.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
